--- a/src/Views/plugins/zoco/search/entry.html.twig
+++ b/src/Views/plugins/zoco/search/entry.html.twig
@@ -6,14 +6,24 @@
   <link href="{{ asset("plugins/zoco/css/zoco.css") }}" rel="stylesheet" />
 {% endblock %}
 
+{% block head_title %}
+  <title>{{ entry.type|upper }}-{{ entry.id|upper }} - Zoco</title>
+{% endblock %}
+
 {% block body_content %}
 <div class="container-fluid">
   <div class="row">
-    <div class="col-md-12">
+    <div class="col-md-6">
       <h2 class="search-entry-title">{{ entry.type|upper }}-{{ entry.id|upper }} <small>{{ entryTags.getTags(entry) }}</small></h2>
+    </div>
+    <div class="col-md-6 clearfix">
+      <div class="btn-group pull-right" role="group">
+        <button disabled type="button" class="btn btn-primary"><i class="fa fa-thumb-tack"></i> {{ 'plugins.zoco.entry.pin'|trans }}</button>
+      </div>
     </div>
   </div>
   <div class="row">
+
     <div class="col-md-6">
       <div class="panel panel-default">
         <div class="panel-heading clearfix">
@@ -31,29 +41,46 @@
         </div>
       </div>
     </div>
-    <div class="col-md-6">
-      <div class="panel panel-default">
-        <div class="panel-heading"><h2 class="panel-title"><i class="fa fa-calendar"></i> {{ 'plugins.zoco.entry.calendar'|trans }}</h2></div>
-        <div class="panel-body">
-          <dl class="dl-horizontal">
-            <dt>{{'plugins.zoco.entry.publication_date'|trans}}</dt>
-            <dd>{{entry.publicationDate|date('d/m/Y')}}</dd>
-            <dt>{{'plugins.zoco.entry.closing_date'|trans}}</dt>
-            <dd>{{entry.closingDate|date('d/m/Y H:i:s')}}</dd>
-          </dl>
-        </div>
-      </div>
-    </div>
-  </div>
-  <div class="row">
-    <div class="col-md-6">
-      <div class="panel panel-default">
-        <div class="panel-heading"><h2 class="panel-title"><i class="fa fa-user"></i> {{ 'plugins.zoco.entry.contracting_authority'|trans }}</h2></div>
-        <div class="panel-body">
 
+    <div class="col-md-6">
+      <div class="row">
+        <div class="col-md-12">
+          <div class="panel panel-default">
+            <div class="panel-heading"><h2 class="panel-title"><i class="fa fa-external-link"></i> {{ 'plugins.zoco.entry.publication_platform'|trans }}</h2></div>
+            <div class="panel-body">
+              <dl class="dl-horizontal">
+                <dt>{{'plugins.zoco.entry.publication_url'|trans}}</dt>
+                <dd>
+                  {% if entry.publicationUrl is not empty %}
+                    <a href="{{ entry.publicationUrl }}" target="_blank">{{ entry.publicationUrl|length > 70 ? entry.publicationUrl|slice(0,70) ~ '...' : entry.publicationUrl }}</a>
+                  {% else %}
+                    <em>--</em>
+                  {% endif %}
+                  <button disabled class="btn btn-xs btn-default"><i class="fa fa-edit"></i></button>
+                </dd>
+                <dd><small><em>{{ 'plugins.zoco.entry.fix_publication_url'|trans }}</em></small></dd>
+              </dl>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-md-12">
+          <div class="panel panel-default">
+            <div class="panel-heading"><h2 class="panel-title"><i class="fa fa-calendar"></i> {{ 'plugins.zoco.entry.calendar'|trans }}</h2></div>
+            <div class="panel-body">
+              <dl class="dl-horizontal">
+                <dt>{{'plugins.zoco.entry.publication_date'|trans}}</dt>
+                <dd>{{entry.publicationDate|date('d/m/Y')}}</dd>
+                <dt>{{'plugins.zoco.entry.closing_date'|trans}}</dt>
+                <dd>{{entry.closingDate|date('d/m/Y H:i:s')}}</dd>
+              </dl>
+            </div>
+          </div>
         </div>
       </div>
     </div>
+
   </div>
+  {% include 'plugins/zoco/search/_' ~ entry.type ~ '_entry.html.twig' ignore missing %}
 </div>
 {% endblock %}
