--- a/src/Views/plugins/zoco/search/results.html.twig
+++ b/src/Views/plugins/zoco/search/results.html.twig
@@ -1,5 +1,9 @@
 {% extends 'home/index.html.twig' %}
-{% import 'plugins/zoco/search/_entry_tags.html.twig' as entryTags %}
+
+{% block head_style %}
+  {{ parent() }}
+  <link href="{{ asset('plugins/zoco/css/zoco.css') }}" rel="stylesheet" />
+{% endblock %}
 
 {% block body_content %}
   <div class="container-fluid">
@@ -19,50 +23,10 @@
     <div class="row">
       <div class="col-md-12">
         <div class="table-responsive">
-          <table class="table table-condensed">
-            <thead>
-              <tr>
-                <td colspan="6" style="text-align: right">
-                  <b>{{ 'plugins.zoco.search.total_results'|trans() }}: {{ total }}</b>
-                </td>
-              </tr>
-              <tr>
-                <th>{{ 'plugins.zoco.search.entry_id'|trans() }}</th>
-                <th>{{ 'plugins.zoco.search.entry_title'|trans() }}</th>
-                <th>{{ 'plugins.zoco.search.tags'|trans() }}</th>
-                <th>{{ 'plugins.zoco.search.entry_publication_date'|trans() }}</th>
-                <th>{{ 'plugins.zoco.search.entry_closing_date'|trans() }}</th>
-                <th>{{ 'plugins.zoco.search.actions'|trans() }}</th>
-              </tr>
-            </thead>
-            <tbody>
-              {% for entry in results %}
-                <tr>
-                  <td><span style="white-space:nowrap;">{{ entry.type|upper }}-{{entry.id}}</span></td>
-                  <td>{{ entry.title|capitalize }}</td>
-                  <td>{{ entryTags.getTags(entry) }}</td>
-                  <td>{{ entry.publicationDate|date('d/m/Y') }}</td>
-                  <td>{{ entry.closingDate|date('d/m/Y H:i:s') }}</td>
-                  <td>
-                    <div class="btn-group" role="group" style="min-width:100px">
-                      <a href="{{ path('plugins_zoco_search_entry', {'entryType': entry.type, 'entryId': entry.id}) }}" class="btn btn-primary"><i class="fa fa-eye"></i></a>
-                      <a disabled="disabled" href="#" class="btn btn-default"><i class="fa fa-thumb-tack"></i></a>
-                    </div>
-                  </td>
-                </tr>
-              {% else %}
-                <tr>
-                  <td colspan="6" style="text-align: center;">
-                    <div class="alert alert-info">
-                      <i class="fa fa-exclamation-circle"></i> {{ 'plugins.zoco.search.no_results'|trans() }}
-                    </div>
-                  </td>
-                </tr>
-              {% endfor %}
-            </tbody>
-          </table>
+          {% include 'plugins/zoco/search/_entries.html.twig' %}
         </div>
       </div>
     </div>
     {% if total > 0 %}{% include 'plugins/zoco/search/_pagination.html.twig' %}{% endif %}
+    {% include 'plugins/zoco/common/_entry_actions.html.twig' %}
 {% endblock %}
