--- a/src/Views/plugins/zoco/search/entry.html.twig
+++ b/src/Views/plugins/zoco/search/entry.html.twig
@@ -15,10 +15,12 @@
   <div class="row">
     <div class="col-md-12 clearfix">
       <div class="btn-group pull-right" role="group">
-        <button type="button" class="btn btn-lg btn-{{ isPinned ? 'warning' : 'default' }}"
-          data-entry-action="{{ isPinned ? 'unpin' : 'pin' }}" data-entry-id="{{entry.id}}" data-entry-type="{{entry.type}}">
+        {% if app.user is not empty %}
+        <button type="button" class="btn btn-lg btn-{{ entry.isPinned(app.user.id) ? 'warning' : 'default' }}"
+          data-entry-action="{{ entry.isPinned(app.user.id) ? 'unpin' : 'pin' }}" data-entry-id="{{entry.id}}" data-entry-type="{{entry.type}}">
           <i class="fa fa-thumb-tack"></i>
         </button>
+        {% endif %}
       </div>
     </div>
   </div>
