--- a/src/Views/plugins/zoco/search/_tenders.html.twig
+++ b/src/Views/plugins/zoco/search/_tenders.html.twig
@@ -1,4 +1,4 @@
-{% import 'plugins/zoco/common/_entry_tags.html.twig' as entryTags %}
+{% import 'plugins/zoco/common/_tender_tags.html.twig' as tenderTags %}
 
 <table class="table table-condensed">
   <thead>
@@ -8,32 +8,32 @@
       </td>
     </tr>
     <tr>
-      <th>{{ 'plugins.zoco.search.entry_id'|trans() }}</th>
-      <th>{{ 'plugins.zoco.search.entry_title'|trans() }}</th>
+      <th>{{ 'plugins.zoco.search.tender_id'|trans() }}</th>
+      <th>{{ 'plugins.zoco.search.tender_title'|trans() }}</th>
       <th>{{ 'plugins.zoco.search.tags'|trans() }}</th>
-      <th>{{ 'plugins.zoco.search.entry_publication_date'|trans() }}</th>
-      <th>{{ 'plugins.zoco.search.entry_closing_date'|trans() }}</th>
+      <th>{{ 'plugins.zoco.search.tender_publication_date'|trans() }}</th>
+      <th>{{ 'plugins.zoco.search.tender_closing_date'|trans() }}</th>
       <th>{{ 'plugins.zoco.search.actions'|trans() }}</th>
     </tr>
   </thead>
   <tbody>
-    {% for entry in results %}
+    {% for tender in results %}
       <tr>
-        <td><span style="white-space:nowrap;">{{ entry.type|upper }}-{{entry.id}}</span></td>
-        <td>{{ entry.title|capitalize }}</td>
-        <td>{{ entryTags.getTags(entry) }}</td>
-        <td>{{ entry.publicationDate|date('d/m/Y') }}</td>
-        <td>{{ entry.closingDate|date('d/m/Y H:i:s') }}</td>
+        <td><span style="white-space:nowrap;">{{ tender.type|upper }}-{{tender.id}}</span></td>
+        <td>{{ tender.title|capitalize }}</td>
+        <td>{{ tenderTags.getTags(tender) }}</td>
+        <td>{{ tender.publicationDate|date('d/m/Y') }}</td>
+        <td>{{ tender.closingDate|date('d/m/Y H:i:s') }}</td>
         <td>
           <div class="btn-group" role="group" style="min-width:100px">
-            <a href="{{ path('plugins_zoco_search_entry', {'entryType': entry.type, 'entryId': entry.id}) }}"
+            <a href="{{ path('plugins_zoco_tender', {'tenderType': tender.type, 'tenderId': tender.id}) }}"
               class="btn btn-primary">
               <i class="fa fa-eye"></i>
             </a>
             {% if app.user is not empty %}
-            {% set isPinned = entry.isPinned(app.user.id) %}
+            {% set isPinned = pins[tender.type  ~ '/' ~ tender.id] is defined and pins[tender.type  ~ '/' ~ tender.id] == true %}
             <button class="btn btn-{{ isPinned ? 'warning' : 'default' }}"
-              data-entry-action="{{ isPinned ? 'unpin' : 'pin' }}" data-entry-id="{{entry.id}}" data-entry-type="{{entry.type}}">
+              data-tender-action="{{ isPinned ? 'unpin' : 'pin' }}" data-tender-id="{{tender.id}}" data-tender-type="{{tender.type}}">
               <i class="fa fa-thumb-tack"></i>
             </button>
             {% endif %}
