Base recherche avancée

--- a/src/Views/plugins/zoco/search/results.html.twig
+++ b/src/Views/plugins/zoco/search/results.html.twig
@@ -18,6 +18,9 @@
               aria-describedby="search-input">
           </div>
         </form>
+        <div class="clearfix">
+          <a class="pull-right" href="{{ path('plugins_zoco_advanced_search') }}">{{ 'plugins.zoco.search.advanced_search'|trans }}</a>
+        </div>
       </div>
     </div>
     <div class="row">
