Correction opérateurs de recherche pour les marchés clos, prise en compte des marchés sans date de cloture mais avec attribution

--- a/src/Views/plugins/zoco/common/_tender_tags.html.twig
+++ b/src/Views/plugins/zoco/common/_tender_tags.html.twig
@@ -1,5 +1,5 @@
 {% macro getTags(entry) %}
-  {% if 'now'|date('YmdHis') > entry.closingDate|date('YmdHis') %}
+  {% if entry.isClosed %}
     <span class="label label-danger">{{'plugins.zoco.tags.closed'|trans}}</span>
   {% else %}
     <span class="label label-info">{{'plugins.zoco.tags.open'|trans}}</span>
