--- a/src/Views/plugins/zoco/search/_tenders.html.twig
+++ b/src/Views/plugins/zoco/search/_tenders.html.twig
@@ -23,8 +23,8 @@
         <td><span style="white-space:nowrap;">{{ tender.type|upper }}-{{tender.id}}</span></td>
         <td>{{ tender.title|capitalize }}</td>
         <td>{{ tenderTags.getTags(tender) }}</td>
-        <td>{{ tender.publicationDate|date('d/m/Y') }}</td>
-        <td>{{ tender.closingDate|date('d/m/Y H:i:s') }}</td>
+        <td>{{ tender.publicationDate is null ? '--' : tender.publicationDate|date('d/m/Y') }}</td>
+        <td>{{ tender.closingDate is null ? '--' : tender.closingDate|date('d/m/Y H:i:s') }}</td>
         <td>
           <div class="btn-group" role="group" style="min-width:100px">
             <a href="{{ path('plugins_zoco_tender', {'tenderType': tender.type, 'tenderId': tender.id}) }}"
